Refactor build process and Back2BackCompatibilityTest
This commit does a bit too much, sorry:
  - Remove restriction for users: plugin is usable with Maven 3.1.1+
    now.
  - Refactor Back2BackCompatibilityTest by reducing duplication and by
    testing all plugins with Maven versions 3.1.1, 3.2.5, 3.3.9, 3.5.4,
    3.6.3., 3.8.1. This makes the test slower, but ensures that the
    plugin stays compatible with older Maven versions.
  - Always build with target Java 8, because building with target 11 has
    no advantage whatsoever. Now the plugin can always be used with JDK
    8+. Tested locally on JDKs 8-16.
  - In order to enable JDK 16 builds, add Surefire JVM parameter
    '--add-opens java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED',
    because the legacy 'jmdesprez' plugin needs it during the E2E
    compatibility test.
  - Remove redundant build profiles in POM and in GitHub workflows.
  - Remove '!pragma graphviz_dot jdot' from test diagrams, because they
    cause failures in Back2BackCompatibilityTest. Even though the test
    passed, it never actually worked. There were huge stack traces on
    the console. The test checks for some typical errors in the console
    log now in order to be able to fail the test in those cases.
  - Upgrade to Maven plugin API 3.8.1. This does not limit the plugin's
    ability to run e.g. on Maven 3.1.1 and also does not mean that we
    need to use Maven 3.8.1 in order to build it. Maven 3.6.3 is still
    enough, and even that would not be necessary without the Takari test
    environment.

--- a/src/test/resources/integration/truncate-project/pom.xml
+++ b/src/test/resources/integration/truncate-project/pom.xml
@@ -65,7 +65,7 @@
             </build>
         </profile>
         <profile>
-            <id>bvfalcon</id>
+            <id>jmdesprez</id>
             <pluginRepositories>
                 <pluginRepository>
                     <id>mulesoft</id>
