--- a/pom.xml
+++ b/pom.xml
@@ -44,17 +44,13 @@
         </repository>
     </distributionManagement>
 
-
-    <prerequisites>
-        <maven>${mavenVersion}</maven>
-    </prerequisites>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <mavenVersion>3.6.3</mavenVersion>
-        <java.build.version>13</java.build.version>
-        <java.target.version>11</java.target.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <mavenAPIVersion>3.8.1</mavenAPIVersion>
+        <mavenBuildVersion>3.6.3</mavenBuildVersion>
     </properties>
 
     <dependencies>
@@ -67,12 +63,12 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>${mavenVersion}</version>
+            <version>${mavenAPIVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
-            <version>${mavenVersion}</version>
+            <version>${mavenAPIVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
@@ -89,13 +85,13 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-compat</artifactId>
-            <version>${mavenVersion}</version>
+            <version>${mavenAPIVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
-            <version>${mavenVersion}</version>
+            <version>${mavenAPIVersion}</version>
             <scope>test</scope>
         </dependency>
 
@@ -116,7 +112,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -130,6 +126,12 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${jvm.arg.addOpens}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <executions>
@@ -141,10 +143,10 @@
                         <configuration>
                             <rules>
                                 <requireMavenVersion>
-                                    <version>${mavenVersion}</version>
+                                    <version>${mavenBuildVersion}</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>${java.build.version}</version>
+                                    <version>${maven.compiler.source}</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
@@ -155,12 +157,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <encoding>UTF-8</encoding>
-                    <release>${java.target.version}</release>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
-                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <fork>true</fork>
                 </configuration>
@@ -311,6 +309,25 @@
 
     <profiles>
         <profile>
+            <id>jdk-8-to-15</id>
+            <activation>
+                <jdk>[1.8,16)</jdk>
+            </activation>
+            <properties>
+                <jvm.arg.addOpens/>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk-16-to-xx</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <properties>
+                <!-- Legacy 'jmdesprez' plugin used in compatibility test needs access to internal JDK API -->
+                <jvm.arg.addOpens>--add-opens java.desktop/com.sun.imageio.plugins.png=ALL-UNNAMED</jvm.arg.addOpens>
+            </properties>
+        </profile>
+        <profile>
             <id>pruefeVersionen</id>
             <build>
                 <plugins>
@@ -337,73 +354,6 @@
                 </plugins>
             </build>
 
-        </profile>
-        <profile>
-            <id>java8ci</id>
-            <properties>
-                <maven.compiler.target>1.8</maven.compiler.target>
-                <java.build.version>1.8</java.build.version>
-                <java.target.version>1.8</java.target.version>
-                <maven.compiler.source>1.8</maven.compiler.source>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration combine.self="override">
-                            <encoding>UTF-8</encoding>
-                            <compilerArgs>
-                                <arg>-Xlint:all</arg>
-                            </compilerArgs>
-                            <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                                <configuration>
-                                    <classifier>java8</classifier>
-                                </configuration>
-                            </execution>
-                        </executions>
-
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java-8</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <properties>
-                <maven.compiler.target>1.8</maven.compiler.target>
-                <java.build.version>1.8</java.build.version>
-                <java.target.version>1.8</java.target.version>
-                <maven.compiler.source>1.8</maven.compiler.source>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration combine.self="override">
-                            <encoding>UTF-8</encoding>
-                            <compilerArgs>
-                                <arg>-Xlint:all</arg>
-                            </compilerArgs>
-                            <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
         <profile>
             <id>release</id>
