--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Setup Graphviz
+      uses: ts-graphviz/setup-graphviz@v1
     - name: Set up JDK 13
       uses: actions/setup-java@v1
       with:
